<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CanData_29bit_nTrans" Id="{25d66df8-e4e7-40f1-aa24-6aee04bc4939}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_CanData_29bit_nTrans : //used with CX2500_M510 hardware
STRUCT
	ntransactionNumber : UINT; //unique identifier for message. See TxRxCanQueue.nTranactionNumber to see last TxMsg sent. Not used by FB_CanItfHelper.
	nLength: UINT; //values 0-8
	nCobid: DWORD; // bits0-28 CAN Cobid; bit 30 CAN RTR flag; bit 31 clear -> 11bit CAN Indentifier, set -> 29bit CAN Indentifier.
	aData: ARRAY[0..7] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>